--- a/static/projects/css/project_index.css
+++ b/static/projects/css/project_index.css
@@ -23,8 +23,12 @@
       background-color: transparent;
       border: none; }
   @media (max-width: 480px) {
-    .figure img, .figure canvas, .figure video, .figure .animation-clip {
+    .figure img, .figure video, .figure .animation-clip {
       max-width: 250px;
+      height: auto; } }
+  @media (max-width: 480px) {
+    .figure .animation-clip canvas {
+      max-width: 249px;
       height: auto; } }
 
 .caption {
